adding swagger config and senmail function but verifiend is not finished
