# docs/endpoints.js
@@ -2,16 +2,16 @@
 module.exports = function (app) {
     app.post('/client/register', (req, res) => {
         // #swagger.tags = ['Client']
-        // #swagger.description = 'client haqida api'
+        // #swagger.description = 'client services'
 
-        const { first_name, last_name, father_name, email, name, url, phone, password, role } = req.body;
+        const { first_name="string", last_name="string", father_name="string", email, img_id, phone, password, role } = req.body;
 
         if (false)
             return res.status(404).send(false)
 
         /* #swagger.responses[200] = { 
-               schema: { $ref: "#/definitions/User" },
-               description: 'Usuário encontrado.' 
+               schema: { $ref: "#/definitions/Client" },
+               description: 'Adding clients' 
         } */
         /* #swagger.responses[400] = {
                description: 'Xatolik roy berdi' 
@@ -19,9 +19,29 @@ module.exports = function (app) {
         return res.status(200).send(data)
 
     }),
+    //mistake get to post
+    app.post('/client/login', (req, res) => {
+       // #swagger.tags = ['Client']
+       // #swagger.description = 'client services'
+
+       const { email, password } = req.body;
+
+       if (false)
+           return res.status(404).send(false)
+
+       /* #swagger.responses[200] = { 
+              schema: { $ref: "#/definitions/Client" },
+              description: 'Thsi api helps to login' 
+       } */
+       /* #swagger.responses[400] = {
+              description: 'Xatolik roy berdi' 
+       } */
+       return res.status(200).send(data)
+
+    }),
     app.post('/client/list', (req, res) => {
             // #swagger.tags = ['Client']
-            // #swagger.description = 'client haqida api'
+            // #swagger.description = 'this api response is list of all clients'
 
      let { pageNumber, pageSize } = req.body;
 
@@ -31,8 +51,8 @@ module.exports = function (app) {
         return res.status(404).send(false)
 
             /* #swagger.responses[200] = { 
-                   schema: { $ref: "#/definitions/User" },
-                   description: 'Usuário encontrado.' 
+                   schema: { $ref: "#/definitions/Client" },
+                   description: 'client services' 
             } */
             /* #swagger.responses[400] = {
                    description: 'Xatolik roy berdi' 
@@ -40,9 +60,50 @@ module.exports = function (app) {
     return res.status(200).send(data)
 
     }),
-    app.get('/client/delete/:id', (req, res) => {
+    // update elements
+    app.post('/client/update/:id', (req, res) => {
+       // #swagger.tags = ['Client']
+       // #swagger.description = 'client services'
+
+       const id = req.params.id;
+       const { first_name, last_name, father_name, email, img_id, phone, password, role } = req.body;
+
+
+       if (false)
+       return res.status(404).send(false)
+
+       /* #swagger.responses[200] = { 
+              schema: { $ref: "#/definitions/User" },
+              description: 'This api helps to update exact user by id' 
+       } */
+       /* #swagger.responses[400] = {
+              description: 'Xatolik roy berdi' 
+       } */
+        return res.status(200).send(data)
+
+    }),
+    app.patch('/client/auth/:id', (req, res) => {
+       // #swagger.tags = ['Client']
+       // #swagger.description = 'client services'
+
+       const id = req.params.id;
+
+       if (false)
+       return res.status(404).send(false)
+
+       /* #swagger.responses[200] = { 
+              schema: { $ref: "#/definitions/User" },
+              description: 'This api helps to update exact user by id' 
+       } */
+       /* #swagger.responses[400] = {
+              description: 'Xatolik roy berdi' 
+       } */
+        return res.status(200).send(data)
+
+    }),
+    app.delete('/client/delete/:id', (req, res) => {
         // #swagger.tags = ['Client']
-        // #swagger.description = 'client haqida api'
+        // #swagger.description = 'this api helps to delete exact client by id'
 
         const id = req.params.id;
 
@@ -50,8 +111,8 @@ module.exports = function (app) {
         return res.status(404).send(false)
 
         /* #swagger.responses[200] = { 
-               schema: { $ref: "#/definitions/User" },
-               description: 'Usuário encontrado.' 
+               schema: { $ref: "#/definitions/Client" },
+               description: 'Client successfully deleted' 
         } */
         /* #swagger.responses[400] = {
                description: 'Xatolik roy berdi' 
@@ -61,7 +122,7 @@ module.exports = function (app) {
     }),
     app.get('/client/getone/:id', (req, res) => {
         // #swagger.tags = ['Client']
-        // #swagger.description = 'client haqida api'
+        // #swagger.description = 'api hels to get exact client by id'
 
         const id = req.params.id;
 
@@ -69,8 +130,8 @@ module.exports = function (app) {
         return res.status(404).send(false)
 
         /* #swagger.responses[200] = { 
-               schema: { $ref: "#/definitions/User" },
-               description: 'Usuário encontrado.' 
+               schema: { $ref: "#/definitions/Client" },
+               description: 'The result of this' 
         } */
         /* #swagger.responses[400] = {
                description: 'Xatolik roy berdi' 
@@ -78,6 +139,25 @@ module.exports = function (app) {
     return res.status(200).send(data)
 
     }),
+    app.post('/image', (req, res) => {
+       // #swagger.tags = ['Img']
+       // #swagger.description = 'Endpoint para obter um usuário.'
+       const file = req.file
+
+
+       if (false)
+           return res.status(404).send(false)
+
+       /* #swagger.responses[200] = { 
+              schema: { $ref: "#/definitions/User" },
+              description: 'Fie success fully added' 
+       } */
+       /* #swagger.responses[400] = {
+              description: 'Xatolik roy berdi' 
+       } */
+       return res.status(200).send(data)
+
+    })
     app.get('/welcome', (req, res) => {
             // #swagger.tags = ['User']
             // #swagger.description = 'Endpoint para obter um usuário.'
