# docs/swagger_output.json
@@ -2,7 +2,7 @@
   "swagger": "2.0",
   "info": {
     "version": "1.0.0",
-    "title": "My API",
+    "title": "Noor API documentation",
     "description": "Documentation automatically generated by the <b>swagger-autogen</b> module."
   },
   "host": "localhost:8080",
@@ -45,7 +45,7 @@
         "tags": [
           "Client"
         ],
-        "description": "client haqida api",
+        "description": "client services",
         "parameters": [
           {
             "name": "obj",
@@ -65,10 +65,7 @@
                 "email": {
                   "example": "any"
                 },
-                "name": {
-                  "example": "any"
-                },
-                "url": {
+                "img_id": {
                   "example": "any"
                 },
                 "phone": {
@@ -86,9 +83,48 @@
         ],
         "responses": {
           "200": {
-            "description": "Usuário encontrado.",
+            "description": "Adding clients",
             "schema": {
-              "$ref": "#/definitions/User"
+              "$ref": "#/definitions/Client"
+            }
+          },
+          "400": {
+            "description": "Xatolik roy berdi"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      }
+    },
+    "/client/login": {
+      "post": {
+        "tags": [
+          "Client"
+        ],
+        "description": "client services",
+        "parameters": [
+          {
+            "name": "obj",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "email": {
+                  "example": "any"
+                },
+                "password": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Thsi api helps to login",
+            "schema": {
+              "$ref": "#/definitions/Client"
             }
           },
           "400": {
@@ -105,7 +141,7 @@
         "tags": [
           "Client"
         ],
-        "description": "client haqida api",
+        "description": "this api response is list of all clients",
         "parameters": [
           {
             "name": "obj",
@@ -125,7 +161,100 @@
         ],
         "responses": {
           "200": {
-            "description": "Usuário encontrado.",
+            "description": "client services",
+            "schema": {
+              "$ref": "#/definitions/Client"
+            }
+          },
+          "400": {
+            "description": "Xatolik roy berdi"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      }
+    },
+    "/client/update/{id}": {
+      "post": {
+        "tags": [
+          "Client"
+        ],
+        "description": "client services",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "obj",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "first_name": {
+                  "example": "any"
+                },
+                "last_name": {
+                  "example": "any"
+                },
+                "father_name": {
+                  "example": "any"
+                },
+                "email": {
+                  "example": "any"
+                },
+                "img_id": {
+                  "example": "any"
+                },
+                "phone": {
+                  "example": "any"
+                },
+                "password": {
+                  "example": "any"
+                },
+                "role": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "This api helps to update exact user by id",
+            "schema": {
+              "$ref": "#/definitions/User"
+            }
+          },
+          "400": {
+            "description": "Xatolik roy berdi"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      }
+    },
+    "/client/auth/{id}": {
+      "patch": {
+        "tags": [
+          "Client"
+        ],
+        "description": "client services",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "This api helps to update exact user by id",
             "schema": {
               "$ref": "#/definitions/User"
             }
@@ -140,11 +269,11 @@
       }
     },
     "/client/delete/{id}": {
-      "get": {
+      "delete": {
         "tags": [
           "Client"
         ],
-        "description": "client haqida api",
+        "description": "this api helps to delete exact client by id",
         "parameters": [
           {
             "name": "id",
@@ -155,9 +284,9 @@
         ],
         "responses": {
           "200": {
-            "description": "Usuário encontrado.",
+            "description": "Client successfully deleted",
             "schema": {
-              "$ref": "#/definitions/User"
+              "$ref": "#/definitions/Client"
             }
           },
           "400": {
@@ -174,7 +303,7 @@
         "tags": [
           "Client"
         ],
-        "description": "client haqida api",
+        "description": "api hels to get exact client by id",
         "parameters": [
           {
             "name": "id",
@@ -185,7 +314,30 @@
         ],
         "responses": {
           "200": {
-            "description": "Usuário encontrado.",
+            "description": "The result of this",
+            "schema": {
+              "$ref": "#/definitions/Client"
+            }
+          },
+          "400": {
+            "description": "Xatolik roy berdi"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      }
+    },
+    "/image": {
+      "post": {
+        "tags": [
+          "Img"
+        ],
+        "description": "Endpoint para obter um usuário.",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "Fie success fully added",
             "schema": {
               "$ref": "#/definitions/User"
             }
@@ -240,81 +392,169 @@
     "User": {
       "type": "object",
       "properties": {
-        "name": {
+        "first_name": {
           "type": "string",
-          "example": "Jhon Doe"
+          "example": "Doston"
         },
-        "age": {
-          "type": "number",
-          "example": 29
+        "last_name": {
+          "type": "string",
+          "example": "Ashurov"
         },
-        "parents": {
-          "type": "object",
-          "properties": {
-            "father": {
-              "type": "string",
-              "example": "Simon Doe"
-            },
-            "mother": {
-              "type": "string",
-              "example": "Marie Doe"
-            }
-          }
+        "father_name": {
+          "type": "string",
+          "example": "Baxtiyorovich"
         },
-        "diplomas": {
-          "type": "array",
-          "items": {
-            "type": "object",
-            "properties": {
-              "school": {
-                "type": "string",
-                "example": "XYZ University"
-              },
-              "year": {
-                "type": "number",
-                "example": 2020
-              },
-              "completed": {
-                "type": "boolean",
-                "example": true
-              },
-              "internship": {
-                "type": "object",
-                "properties": {
-                  "hours": {
-                    "type": "number",
-                    "example": 290
-                  },
-                  "location": {
-                    "type": "string",
-                    "example": "XYZ Company"
-                  }
-                }
-              }
-            }
-          }
+        "email": {
+          "type": "string",
+          "example": "ashurov@list.ru"
+        },
+        "img_id": {
+          "type": "string",
+          "example": "6184b677f552e1ab7baf6fa2"
+        },
+        "phone": {
+          "type": "string",
+          "example": "94-456-7891"
+        },
+        "password": {
+          "type": "string",
+          "example": "789456qwer#A"
+        },
+        "role": {
+          "type": "string",
+          "example": "admin"
         }
       }
+    },
+    "Client": {
+      "type": "object",
+      "properties": {
+        "first_name": {
+          "type": "string",
+          "example": "Doston"
+        },
+        "last_name": {
+          "type": "string",
+          "example": "Ashurov"
+        },
+        "father_name": {
+          "type": "string",
+          "example": "Baxtiyorovich"
+        },
+        "email": {
+          "type": "string",
+          "example": "ashurov@list.ru"
+        },
+        "img_id": {
+          "type": "string",
+          "example": "6184b677f552e1ab7baf6fa2"
+        },
+        "phone": {
+          "type": "string",
+          "example": "94-456-7891"
+        },
+        "password": {
+          "type": "string",
+          "example": "789456qwer#A"
+        },
+        "role": {
+          "type": "string",
+          "example": "client"
+        }
+      }
+    },
+    "AddClient": {
+      "type": "object",
+      "properties": {
+        "first_name": {
+          "type": "string",
+          "example": "Doston"
+        },
+        "last_name": {
+          "type": "string",
+          "example": "Ashurov"
+        },
+        "father_name": {
+          "type": "string",
+          "example": "Baxtiyorovich"
+        },
+        "email": {
+          "type": "string",
+          "example": "ashurov@list.ru"
+        },
+        "img_id": {
+          "type": "string",
+          "example": "6184b677f552e1ab7baf6fa2"
+        },
+        "phone": {
+          "type": "string",
+          "example": "94-456-7891"
+        },
+        "password": {
+          "type": "string",
+          "example": "789456qwer#A"
+        },
+        "role": {
+          "type": "string",
+          "example": "admin"
+        }
+      },
+      "required": [
+        "first_name",
+        "last_name",
+        "father_name",
+        "email",
+        "img_id",
+        "phone",
+        "password",
+        "role"
+      ]
     },
     "AddUser": {
       "type": "object",
       "properties": {
-        "name": {
+        "first_name": {
           "type": "string",
-          "example": "Jhon Doe"
+          "example": "Doston"
         },
-        "age": {
-          "type": "number",
-          "example": 29
-        },
-        "about": {
+        "last_name": {
           "type": "string",
-          "example": ""
+          "example": "Ashurov"
+        },
+        "father_name": {
+          "type": "string",
+          "example": "Baxtiyorovich"
+        },
+        "email": {
+          "type": "string",
+          "example": "ashurov@list.ru"
+        },
+        "img_id": {
+          "type": "string",
+          "example": "6184b677f552e1ab7baf6fa2"
+        },
+        "phone": {
+          "type": "string",
+          "example": "94-456-7891"
+        },
+        "password": {
+          "type": "string",
+          "example": "789456qwer#A"
+        },
+        "role": {
+          "type": "string",
+          "example": "admin"
         }
       },
       "required": [
-        "name",
-        "age"
+        "first_name",
+        "last_name",
+        "father_name",
+        "email",
+        "img_id",
+        "phone",
+        "password",
+        "role"
       ]
     }
   }
